--- a/app/src/Components/Navbar/Navbar.css
+++ b/app/src/Components/Navbar/Navbar.css
@@ -3,6 +3,6 @@
 }
 
 .css-19r6kue-MuiContainer-root {
-  /* background: #f5f5f5; */
-  color: #000;
+  /* /* background: #f5f5f5;  */
+  /* color: black; */
 }
