--- a/app/src/Components/NFT/NftGallery.module.css
+++ b/app/src/Components/NFT/NftGallery.module.css
@@ -160,17 +160,14 @@
 }
 
 .card_container {
-  /* background-color: #fff; */
   background: rgba(255, 255, 255, 0.2);
-  /* color: #fff; */
   width: 100%;
   max-width: 288px;
   max-height: 436px;
   border-radius: 12px;
   padding: 8px;
   border: 1px solid #cfd9f0;
-  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
-  /* backdrop-filter: blur(5px); */
+  cursor: pointer;
 }
 
 .image_container {
