--- a/app/src/Components/Navbar/Navbar.css
+++ b/app/src/Components/Navbar/Navbar.css
@@ -10,8 +10,19 @@
 .walletAddress {
   display: flex;
   align-items: center;
-  background-color: black;
+  background-color: #757677 !important;
+  color: #d3d4d5 !important;
   padding: 0.3rem 0.6rem;
   border-radius: 50px !important;
   text-transform: none !important;
+}
+
+.buymore-btn {
+  border: 1px solid #d3d4d5 !important;
+}
+
+.buymore-btn:hover {
+  background-color: transparent !important;
+  border: 1px solid #d3d4d5 !important;
+  color: #d3d4d5 !important;
 }
