--- a/app/src/Pages/Landing/LandingPage.css
+++ b/app/src/Pages/Landing/LandingPage.css
@@ -7,14 +7,14 @@
 }
 #text {
   font-size: 1.5rem;
-  transform: translateX(900px);
+  transform: translateX(1000px);
 }
 
 .landing-page-logo {
-  height: 70vh;
-  width: 90vw;
+  height: 50vh;
+  width: 70vw;
   animation: logorotation 650ms;
-  margin-top: 3rem;
+  margin-top: 8rem;
   margin-bottom: 0rem;
 }
 
@@ -22,23 +22,24 @@
   height: 70px;
   display: block;
   margin: auto;
-  margin-top: 8em;
-  margin-bottom: -9rem;
+  margin-top: 4.5em;
+  margin-bottom: -5rem;
 }
 
 .left-text {
   width: 100%;
-  margin-left: 14rem;
-  margin-top: 30px;
+  margin-left: 7.9em;
+  margin-top: 2em;
   text-align: center;
+  font-size: 40px;
 }
 
 .right-text {
   text-align: center;
-  margin-left: 15rem;
+  margin-left: 6.5em;
   width: 100%;
-  font-size: 30px;
-  margin-top: 50px;
+  font-size: 28px;
+  margin-top: 3em;
 }
 
 .glitch {
@@ -50,19 +51,18 @@
     -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
     0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
   animation: glitch 500ms infinite;
-  transform: translateX(-600px);
+  transform: translateX(-700px);
 }
 .landingbtn {
-  /* transform: translateX(600px); */
-  margin-top: -50px !important;
-  padding: 12px 30px !important;
-  font-size: 18px !important;
+  margin-top: 3em !important;
+  padding: 10px 20px !important;
+  font-size: 14px !important;
   display: block !important;
-  border: 2px solid #d3d4d5 !important;
+  border: 1px solid #d3d4d5 !important;
 }
 .landingbtn:hover {
   background-color: transparent !important;
-  border: 2px solid #d3d4d5 !important;
+  border: 1px solid #d3d4d5 !important;
   color: #d3d4d5 !important;
 }
 
