--- a/app/src/App.css
+++ b/app/src/App.css
@@ -41,8 +41,8 @@ a {
 .btn {
   background: #757677 !important;
   color: #d2d3d4 !important;
-  border-radius: 50px !important;
-  padding: 3px 20px !important;
+  border-radius: 5em !important;
+  padding: 0.3em 1.8em !important;
 }
 
 .App {
