--- a/app/src/Components/Navbar/Navbar.css
+++ b/app/src/Components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
   align-items: center;
   background-color: #757677 !important;
   color: #d3d4d5 !important;
-  padding: 0.3rem 0.6rem;
+  padding: 0.3em 0.6em;
   border-radius: 50px !important;
   text-transform: none !important;
 }
