--- a/app/src/Components/Navigation Buttons/NavButtons.css
+++ b/app/src/Components/Navigation Buttons/NavButtons.css
@@ -8,3 +8,7 @@
   border: 2px solid #d3d4d5 !important;
   color: #d3d4d5 !important;
 }
+
+.css-13xfq8m-MuiTabPanel-root {
+  padding: 0 !important;
+}
