--- a/app/src/Components/AddNFT/NftCreator.module.css
+++ b/app/src/Components/AddNFT/NftCreator.module.css
@@ -6,6 +6,7 @@
   max-width: fit-content;
   margin: auto;
   border-radius: 8px;
+  margin-top: 2em;
 }
 
 .page_container {
@@ -20,28 +21,7 @@
   display: flex;
   gap: 32px;
   padding: 32px;
-  background: linear-gradient(
-    to bottom right,
-    rgba(0, 255, 0, 0.2),
-    rgba(255, 165, 0, 0.5) 50%,
-    rgba(255, 192, 203, 0.8)
-  );
-  box-shadow: 0px 20px 40px rgba(255, 192, 203, 0.8);
-}
-
-.page_container_submitted::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 75%;
-  height: 80%;
-  background: linear-gradient(
-    to bottom left,
-    transparent 49.5%,
-    white 50%,
-    transparent 50%
-  );
+  color: #757677;
 }
 
 .page_header {
